rendered-manifests.yaml
---
# Source: danube-helm-chart/templates/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danube-danube-broker1
  labels:
    app: danube-danube
    instance: broker1
spec:
  type: ClusterIP
  ports:
    - name: broker-port
      port: 6650
      targetPort: 6650
    - name: admin-port
      port: 50051
      targetPort: 50051
    - name: prometheus-port
      port: 9040
      targetPort: 9040
  selector:
    app: danube-danube
    instance: broker1
---
# Source: danube-helm-chart/templates/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danube-danube-broker2
  labels:
    app: danube-danube
    instance: broker2
spec:
  type: ClusterIP
  ports:
    - name: broker-port
      port: 6650
      targetPort: 6650
    - name: admin-port
      port: 50051
      targetPort: 50051
    - name: prometheus-port
      port: 9040
      targetPort: 9040
  selector:
    app: danube-danube
    instance: broker2
---
# Source: danube-helm-chart/templates/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danube-danube-broker3
  labels:
    app: danube-danube
    instance: broker3
spec:
  type: ClusterIP
  ports:
    - name: broker-port
      port: 6650
      targetPort: 6650
    - name: admin-port
      port: 50051
      targetPort: 50051
    - name: prometheus-port
      port: 9040
      targetPort: 9040
  selector:
    app: danube-danube
    instance: broker3
---
# Source: danube-helm-chart/templates/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  danube-etcd
  labels:
    app:  danube-etcd
    release: danube
spec:
  type: ClusterIP
  ports:
    - port: 2379
      targetPort: 2379
  selector:
    app:  danube-etcd
    release: danube
---
# Source: danube-helm-chart/templates/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: danube-danube-broker1
  labels:
    app: danube-danube
    instance: broker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: danube-danube
      instance: broker1
  template:
    metadata:
      labels:
        app: danube-danube
        instance: broker1
    spec:
      containers:
        - name: danube-helm-chart
          image: "ghcr.io/danube-messaging/danube-broker:latest"
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/danube-broker"]
          args: ["--config-file", "/etc/danube_broker.yml", "--advertised-addr", "broker1.example.com:30115"]
          ports:
            - containerPort: 6650
              name: broker-port
            - containerPort: 50051
              name: admin-port
            - containerPort: 9040
              name: prometheus-port
          volumeMounts:
            - name: config-volume
              mountPath: "/etc/danube_broker.yml"
              subPath: "danube_broker.yml"
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: config-volume
          configMap:
            name: danube-broker-config
---
# Source: danube-helm-chart/templates/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: danube-danube-broker2
  labels:
    app: danube-danube
    instance: broker2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: danube-danube
      instance: broker2
  template:
    metadata:
      labels:
        app: danube-danube
        instance: broker2
    spec:
      containers:
        - name: danube-helm-chart
          image: "ghcr.io/danube-messaging/danube-broker:latest"
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/danube-broker"]
          args: ["--config-file", "/etc/danube_broker.yml", "--advertised-addr", "broker2.example.com:30115"]
          ports:
            - containerPort: 6650
              name: broker-port
            - containerPort: 50051
              name: admin-port
            - containerPort: 9040
              name: prometheus-port
          volumeMounts:
            - name: config-volume
              mountPath: "/etc/danube_broker.yml"
              subPath: "danube_broker.yml"
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: config-volume
          configMap:
            name: danube-broker-config
---
# Source: danube-helm-chart/templates/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: danube-danube-broker3
  labels:
    app: danube-danube
    instance: broker3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: danube-danube
      instance: broker3
  template:
    metadata:
      labels:
        app: danube-danube
        instance: broker3
    spec:
      containers:
        - name: danube-helm-chart
          image: "ghcr.io/danube-messaging/danube-broker:latest"
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/danube-broker"]
          args: ["--config-file", "/etc/danube_broker.yml", "--advertised-addr", "broker3.example.com:30115"]
          ports:
            - containerPort: 6650
              name: broker-port
            - containerPort: 50051
              name: admin-port
            - containerPort: 9040
              name: prometheus-port
          volumeMounts:
            - name: config-volume
              mountPath: "/etc/danube_broker.yml"
              subPath: "danube_broker.yml"
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: config-volume
          configMap:
            name: danube-broker-config
---
# Source: danube-helm-chart/templates/etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: danube-etcd
  labels:
    app:  danube-etcd
    chart: danube-helm-chart-0.1.5
    release: danube
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  danube-etcd
      release: danube
  template:
    metadata:
      labels:
        app:  danube-etcd
        release: danube
    spec:
      containers:
        - name: etcd
          image: "bitnami/etcd:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2379
---
# Source: danube-helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danube-danube-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: broker1.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danube-danube-broker1
                port:
                  number: 6650
    - host: broker2.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danube-danube-broker2
                port:
                  number: 6650
    - host: broker3.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danube-danube-broker3
                port:
                  number: 6650

    # Admin API routing for all brokers
    - host: broker1.example.com
      http:
        paths:
          - path: /broker1
            pathType: Prefix
            backend:
              service:
                name: danube-danube-broker1
                port:
                  number: 50051
          - path: /broker2
            pathType: Prefix
            backend:
              service:
                name: danube-danube-broker2
                port:
                  number: 50051
          - path: /broker3
            pathType: Prefix
            backend:
              service:
                name: danube-danube-broker3
                port:
                  number: 50051
